chore: reorganize sync scripts and generated skill artifacts
Move sync utilities under scripts/ and update command docs/paths accordingly. Stop tracking generated marketplace plugin skill trees so source docs remain single-source and PR noise is reduced.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ dist/
 build/
 out/
 coverage/
+
+# AI agent local files (ephemeral, not for version control)
+.agent/local/
+
+# Claude Code local settings (machine-specific)
+.claude/settings.local.json
+
+# Generated marketplace skill payloads (build artifacts)
+my-marketplace/plugins/*/skills/
